# dtw-python

./: .bumpversion.toml  .coveragerc  .gitchangelog.rc  .gitignore  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Makefile.maintainer  README.md  README.rst  condaenv.txt  condaenv.yml  hussitest  meson.build  project.toml  pyproject.toml  rforge_index.md  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_and_test.yml  build_wheels.yml  build_wheels_on_release.yml  codecov.yml  quick_test_and_codecov.yml
docs/: CASE.SENSITIVE.FS  Makefile  api.rst  apidocs-requirements.txt  conf.py  dtw.rst  index.md  index.rst  installation.rst  make.bat  modules.rst  python.rst  usage.rst
docs/source/: dtwr.rst  modules.rst  rdtw.rst
dtw/: __init__.py  __main__.py  _backtrack.py  _dtw_utils.c  _dtw_utils.pyx  _dtw_utils_py.py  _globalCostMatrix.py  countPaths.py  data.py  dtw.py  dtwPlot.py  dtw_computeCM.c  dtw_core.c  dtw_demo_data.py  dtw_test_data.py  mvm.py  stepPattern.py  warp.py  warpArea.py  window.py
dtwr/: __init__.py  _backtrack.py  _cli.py  _dtw_utils.c  _globalCostMatrix.py  aami.py  cli.py  countPaths.py  data.py  dtw.py  dtwPlot.py  mvm.py  stepPattern.py  warp.py  warpArea.py  window.py
maintainer/: README.maintainer  homepage_example.py  roxypick.py  roxypick2.py
maintainer/examples/: ex_aami.py.txt  ex_countPaths.py.txt  ex_dtw.py.txt  ex_dtwPlotDensity.py.txt  ex_dtwWindowingFunctions.py.txt  ex_mvmStepPattern.py.txt  ex_stepPattern.py.txt  ex_warp.py.txt  ex_warpArea.py.txt
rdtw/: __init__.py  _dtw_utils.pyx  aami.py  backtrack.py  cli.py  countPaths.py  dtw.py  dtw_computeCM.h  globalCostMatrix.py  mvm.py  rdtw.py  setup.py  stepPattern.py  warp.py  warpArea.py  window.py
tests/: __init__.py  conftest.py  query.csv  reference.csv  test_cli.py  test_countPaths.py  test_cran.py  test_doctests.py  test_dtw.py  test_dtw_s.py  test_dtwr.py  test_issue_5.py  test_issues.py  test_plot.py  test_rdtw.py
